--- a/devin/comparing-cody-vs-devin.mdx
+++ b/devin/comparing-cody-vs-devin.mdx
@@ -10,7 +10,7 @@ metaDescription: 'Compare Sourcegraph Cody and Devin - two powerful AI coding as
 canonicalUrl: 'https://www.greptile.com/blog/comparing-cody-vs-devin'
 ---
 
-As AI-powered developer tools continue to reshape how we write code, Sourcegraph Cody (https://sourcegraph.com/cody) and Devin (https://devin.ai/) stand out as two prominent solutions in the market. Both offer comprehensive AI assistance for developers, but Devin distinguishes itself with autonomous capabilities while Cody focuses on enhanced context-aware assistance. 
+As AI-powered developer tools continue to reshape how we write code, [Sourcegraph Cody](https://sourcegraph.com/cody) and [Devin](https://devin.ai/) stand out as two prominent solutions in the market. Both offer comprehensive AI assistance for developers, but Devin distinguishes itself with autonomous capabilities while Cody focuses on enhanced context-aware assistance. 
 
 This comparison will help you understand the key differences and make an informed decision for your development needs.
 
