--- a/cody/comparing-cody-vs-codeium.mdx
+++ b/cody/comparing-cody-vs-codeium.mdx
@@ -10,7 +10,9 @@ metaDescription: 'In-depth comparison of Sourcegraph Cody and Codeium, exploring
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Sourcegraph Cody and Codeium stand out as two prominent solutions in the market. Both tools offer powerful code completion and AI assistance capabilities, but they differ significantly in their approach to context awareness and enterprise features. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [Sourcegraph Cody](https://sourcegraph.com/cody) and [Codeium](https://codeium.com/) stand out as two prominent solutions in the market. Both offer powerful AI code completion and developer tools, but they differ significantly in their approach to context awareness and enterprise features. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,16 +31,16 @@ As AI-powered development tools continue to reshape how we write code, Sourcegra
     ['JetBrains Support', '✓', '✗'],
     ['NVIM Support', '✗', '✗'],
     ['Models Supported', 'GPT-4, Claude 3.5, Custom', 'GPT-4o, Claude 3.5'],
-    ['Pricing', 'Free tier + Pro $9/mo', 'Free, Pro $15/mo, Ultimate $60/mo']
+    ['Pricing', 'Free, Pro $9/mo, Enterprise $19/mo', 'Free, Pro $15/mo, Ultimate $60/mo']
 ]
 
 ## Code Completion
 
 ### Sourcegraph Cody
-Cody provides context-aware code completion that understands your entire codebase. It excels at maintaining consistent coding patterns and offers intelligent suggestions based on your repository's context. The completion system is particularly strong in multi-file scenarios and can handle complex code relationships through its Code Graph analysis.
+Cody provides context-aware code completion that understands your entire codebase, and excels at maintaining consistent coding patterns, offering intelligent suggestions based on your repository's context. The completion system is particularly strong in multi-file scenarios and can handle complex code relationships through its Code Graph analysis.
 
 ### Codeium
-Codeium offers advanced in-line and multi-line code completion with fill-in-the-middle (FIM) capabilities. It adapts to your coding style and provides boilerplate code suggestions across various programming paradigms. The system is particularly notable for its speed and real-time suggestions.
+Codeium offers advanced in-line and multi-line code completion with fill-in-the-middle (FIM) capabilities. It also adapts to your coding style and provides boilerplate code suggestions across various programming paradigms. The system is particularly notable for its speed and real-time suggestions.
 
 ## AI Chat Capabilities
 
@@ -51,10 +53,10 @@ Codeium's Cascade feature provides an agentic chatbot experience with two distin
 ## Context Awareness
 
 ### Sourcegraph Cody
-Cody employs multiple context retrieval methods, including Keyword Search, Sourcegraph Search API, and Code Graph analysis. It offers comprehensive repository analysis and intelligent code understanding, making it particularly strong for enterprise-scale codebases.
+Cody employs multiple context retrieval methods, including Keyword Search, Sourcegraph Search API, and Code Graph analysis. It also offers comprehensive repository analysis and intelligent code understanding, making it particularly strong for enterprise-scale codebases.
 
 ### Codeium
-Codeium uses contextually aware systems that adapt to your coding style and project requirements. While it offers good context awareness, it focuses more on immediate file context rather than the deep repository analysis that Cody provides.
+Codeium uses contextually aware systems that adapt to your coding style and project requirements. While it offers good context awareness, it focuses more on immediate file context, rather than the deep repository analysis that Cody provides.
 
 ## Privacy and Security
 
@@ -68,23 +70,40 @@ Codeium emphasizes user privacy with configurable data sharing options. Users ca
 
 ### Sourcegraph Cody
 - **Free/Pro Tier**
+  - Free for individual users
   - Single repository access
   - Basic IDE integration
   - Essential features
+- **Pro Tier**
+  - $9 per month
+  - Unlimited chat and commands
+  - More powerful chat options
+  - Support with limited SLAs
 - **Enterprise Tier**
+  - $19 per user, per month
   - Multi-repository support
   - Enhanced security features
   - Team collaboration tools
   - Custom deployment options
 
 ### Codeium
-- **Free Plan**: 5 User Prompt credits, 5 Flow Action credits
-- **Free Trial**: 50 User Prompt credits, 200 Flow Action credits (2 weeks)
-- **Pro Plan**: $15/month - 500 User Prompt credits, 1500 Flow Action credits
-- **Pro Ultimate**: $60/month - Unlimited User Prompt credits, 3000 Flow Action credits
+- **Free Plan**
+  - 5 User Prompt credits
+  - 5 Flow Action credits
+- **Free Trial**
+  - 50 User Prompt credits
+  - 200 Flow Action credits (2 weeks)
+- **Pro Plan**
+  - $15/month
+  - 500 User Prompt credits
+  - 1500 Flow Action credits
+- **Pro Ultimate**
+  - $60/month
+  - Unlimited User Prompt credits
+  - 3000 Flow Action credits
 
 ## Conclusion
 
 Sourcegraph Cody and Codeium each offer compelling features for different developer needs. Cody excels in enterprise environments with its deep codebase understanding and multi-repository support, making it ideal for large teams working on complex projects. Its context awareness and enterprise security features make it particularly attractive for organizations requiring robust security measures and comprehensive code analysis.
 
-Codeium, on the other hand, offers a more flexible pricing structure and broader IDE support, including Vim and Emacs integration. It's particularly strong in its real-time code completion capabilities and might be more suitable for individual developers or smaller teams looking for an efficient coding assistant with modern features like fill-in-the-middle completion and advanced terminal integration.
+Codeium, on the other hand, offers a more flexible pricing structure and broader IDE support, including Vim and Emacs integration. It's particularly strong in its real-time code completion capabilities, and might be better suited for individual developers or smaller teams. This could be especially true for anyone looking for modern features like fill-in-the-middle completion and advanced terminal integration.
