--- a/cody/comparing-cody-vs-continue.mdx
+++ b/cody/comparing-cody-vs-continue.mdx
@@ -10,7 +10,9 @@ metaDescription: 'Detailed comparison of Sourcegraph Cody and Continue, explorin
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Sourcegraph Cody and Continue stand out as two prominent solutions in the market. Both tools offer robust IDE integration and AI-powered assistance, but they differ significantly in their approach to licensing and enterprise features. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developor tools continue to reshape how we write code, [Sourcegraph Cody](https://sourcegraph.com/) and [Continue](https://www.continue.dev/) stand out as two prominent solutions in the market. Both offer robust IDE integration and AI code completion, but they differ significantly in their approach to licensing and enterprise features. 
+
+This comparison will help you understand the key differences and make an informed decision for your AI programming needs.
 
 ## Feature Comparison
 
@@ -29,21 +31,21 @@ As AI-powered development tools continue to reshape how we write code, Sourcegra
     ['JetBrains Support', '✓', '✓'],
     ['NVIM Support', '✗', '✗'],
     ['Models Supported', 'GPT-4, Claude, Custom', 'Universal and Custom Models'],
-    ['Pricing', 'Free tier + Pro $9/mo', 'Free tier + Enterprise plans']
+    ['Pricing', 'Free tier + Pro $9/mo + Enterprise $19/user/mo', 'Free tier + Enterprise plans']
 ]
 
 ## Code Completion
 
 ### Sourcegraph Cody
-Cody offers sophisticated code completion capabilities with context-aware suggestions drawn from your entire codebase. It excels at maintaining consistent coding patterns and reducing common errors through its intelligent completion system. The tool provides both line-by-line and full-function completions, with strong support for multiple programming languages and configuration files.
+Cody offers sophisticated code completion capabilities with context-aware suggestions drawn from your entire codebase, and excels at maintaining consistent coding patterns and reducing common errors through its intelligent completion system. The tool provides both line-by-line and full-function completions, with strong support for multiple programming languages and configuration files.
 
 ### Continue
-Continue provides a flexible code completion system with streaming diff previews and tab completion support. Its open-source nature allows for customization of the completion experience, and it can be integrated with multiple AI models. The status bar integration allows quick enabling/disabling of suggestions, making it easy to control when you want AI assistance.
+Continue provides a flexible code completion system with streaming diff previews and tab completion support. Its open-source nature allows for customization of the completion experience, and integration with multiple AI models. The status bar integration also allows quick enabling/disabling of suggestions, making it easy to control when you want AI assistance.
 
 ## AI Chat Capabilities
 
 ### Sourcegraph Cody
-Cody's chat functionality is deeply integrated with codebase context, featuring an @-mention system for adding specific context from files, symbols, and repositories. The chat interface supports multi-file context and provides enterprise-grade collaboration tools for team environments. The context window is configurable, allowing for optimization between response quality and performance.
+Cody's chat functionality is deeply integrated with codebase context, featuring an @-mention system for adding specific context from files, symbols, and repositories. The chat interface supports multi-file context and provides enterprise-grade collaboration tools for team environments. In addition, the context window is configurable, allowing for optimization between response quality and performance.
 
 ### Continue
 Continue offers an integrated chat interface directly within your IDE, eliminating the need to switch between windows. It supports follow-up questions and iterative improvements, making it excellent for ongoing development conversations. The chat system is particularly strong in providing real-time responses to coding queries and maintaining context throughout the conversation.
@@ -51,7 +53,7 @@ Continue offers an integrated chat interface directly within your IDE, eliminati
 ## Context Awareness
 
 ### Sourcegraph Cody
-Cody employs multiple context retrieval methods including Keyword Search, Sourcegraph Search API, and Code Graph analysis. It offers comprehensive repository analysis and intelligent code understanding, particularly powerful in the Enterprise tier with features like OpenCtx capabilities and remote file/directory access.
+Cody employs multiple context retrieval methods including Keyword Search, Sourcegraph Search API, and Code Graph analysis. It offers comprehensive repository analysis and intelligent code understanding, which is particularly powerful in the Enterprise tier with features like OpenCtx capabilities and remote file/directory access.
 
 ### Continue
 Continue provides contextual awareness through its integrated development environment, maintaining context across your entire codebase. It offers customizable context integration options and supports multiple AI models, allowing developers to fine-tune how context is handled in their specific use cases.
@@ -62,23 +64,32 @@ Continue provides contextual awareness through its integrated development enviro
 Cody offers enterprise-grade security features, particularly in its Enterprise tier, with enhanced security controls and organization-wide management capabilities. However, being a closed-source solution means users must trust Sourcegraph's security implementations without the ability to audit the code directly.
 
 ### Continue
-As an open-source solution, Continue provides complete transparency in its security implementation. Users can audit the code, modify it according to their security requirements, and self-host the solution. This makes it particularly attractive for organizations with strict security requirements or those who need to maintain complete control over their development environment.
+As an open-source solution, Continue provides complete transparency in its security implementation. Users can audit the code, modify it according to their security requirements, and self-host the solution. This makes it particularly attractive for organizations with strict security requirements, or those who need to maintain complete control over their development environment.
 
 ## Pricing
 
 ### Sourcegraph Cody
-- **Free/Pro Tier**
+- **Free Tier**
+  - Free for individual users
   - Single repository access
   - Basic IDE integration
   - Essential code completion
+- **Pro Tier**
+  - $9 per month
+  - Unlimited chat and commands
+  - More powerful LLMs for chat
+  - Support with limited SLAs
 - **Enterprise Tier**
+  - $19 per user, per month
   - Multi-repository support
   - Enhanced features across all IDEs
   - Team collaboration capabilities
   - Custom deployment options
 
 ### Continue
-- **Open Source (Free)**
+- **Open Source**
+  - Completeley free for individuals
+  - Enterprise plan available
   - Full feature access
   - No usage limitations
   - Community support
@@ -87,6 +98,6 @@ As an open-source solution, Continue provides complete transparency in its secur
 
 ## Conclusion
 
-Sourcegraph Cody and Continue represent two different approaches to AI-assisted development. Cody offers a polished, enterprise-ready solution with sophisticated features and tiered pricing, making it ideal for large organizations requiring managed services and enhanced security controls. Its strength lies in its comprehensive enterprise features and deep integration with existing development workflows.
+Sourcegraph Cody and Continue represent two different approaches to AI programming and development. Cody offers a polished, enterprise-ready solution with sophisticated features and tiered pricing, making it ideal for large organizations requiring managed services and enhanced security controls. Its strength lies in its comprehensive enterprise features and deep integration with existing development workflows.
 
-Continue, on the other hand, stands out with its open-source approach, offering complete transparency and customization capabilities without any cost. It's particularly attractive for developers and organizations who value flexibility, want to maintain control over their tools, or need to modify the solution to meet specific requirements. While it may require more setup and configuration compared to Cody, its active community and regular updates make it a robust choice for those willing to invest time in customization.
+Continue, on the other hand, stands out with its open-source approach, offering complete transparency and customization capabilities without any cost. It's particularly attractive for developers and organizations who value flexibility, want to maintain control over their tools, or need to modify the solution to meet specific requirements. While it may require more setup and configuration compared to Cody, its active community and regular updates make it a robust choice for those willing to invest time in its customization.
