--- a/cody/comparing-cody-vs-qodo.mdx
+++ b/cody/comparing-cody-vs-qodo.mdx
@@ -31,7 +31,7 @@ This comparison will help you understand the key differences and make an informe
     ['JetBrains Support', '✓', '✓'],
     ['NVIM Support', '✗', '✗'],
     ['Models Supported', 'GPT-4, Claude, Custom', 'Universal, Fine-tuned Models'],
-    ['Pricing', 'Free tier + Pro $9/mo', 'Free tier + Multiple plans']
+    ['Pricing', 'Free tier + Pro $9/mo + Enterprise $19/user/mo', 'Free tier + Teams $19/user/mo + Enterprise custom pricing']
 ]
 
 ## Code Completion
@@ -88,6 +88,7 @@ Qodo Gen implements strong privacy measures, including encryption for all transm
 
 ### Qodo Gen
 - **Developer Tier**
+  - Free for individual use
   - Access to basic features
   - Suitable for individual developers
   - Basic IDE integration
