--- a/cody/comparing-cody-vs-replit.mdx
+++ b/cody/comparing-cody-vs-replit.mdx
@@ -10,7 +10,9 @@ metaDescription: 'Comprehensive comparison of Sourcegraph Cody and Replit AI fea
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Sourcegraph Cody and Replit AI stand out as two prominent solutions in the market. Both tools offer powerful AI-assisted development capabilities, but while Sourcegraph Cody focuses on deep codebase integration and multi-IDE support, Replit AI provides a more web-centric, full-stack development experience. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, Sourcegraph Cody and Replit AI stand out as two prominent code completion solutions in the market. Both offer powerful AI-assisted development capabilities, but while Sourcegraph Cody focuses on deep codebase integration and multi-IDE support, Replit AI provides a more web-centric, full-stack development experience. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,13 +31,13 @@ As AI-powered development tools continue to reshape how we write code, Sourcegra
     ['JetBrains Support', '✓', 'N/A'],
     ['NVIM Support', '✗', 'N/A'],
     ['Models Supported', 'GPT-4, Claude, Custom', 'Claude 3.5, GPT-4o'],
-    ['Pricing', 'Free tier + Pro $9/mo', 'Free, Core $15/mo']
+    ['Pricing', 'Free tier + Pro $9/mo + Enterprise $19/user/mo', 'Free tier + Core $15/mo']
 ]
 
 ## Code Completion
 
 ### Sourcegraph Cody
-Cody offers sophisticated code completion with context-aware suggestions drawn from your entire codebase. It maintains consistent coding patterns and reduces common errors through intelligent completion that understands both the local and global context of your code. The system integrates seamlessly across multiple IDEs and supports a wide range of programming languages.
+Cody offers sophisticated code completion with context-aware suggestions drawn from your entire codebase. It maintains consistent coding patterns and reduces common errors through intelligent completion that understands both the local and global context of your code. The system also integrates seamlessly across multiple IDEs and supports a wide range of programming languages.
 
 ### Replit AI
 Replit's Complete Code feature provides contextual code suggestions activated by the tab key. It focuses on real-time suggestions within the Replit environment and is particularly strong in web development scenarios. The system is designed to be intuitive and works well within Replit's integrated development environment.
@@ -43,7 +45,7 @@ Replit's Complete Code feature provides contextual code suggestions activated by
 ## AI Chat Capabilities
 
 ### Sourcegraph Cody
-Cody's chat functionality is deeply integrated with codebase context, allowing developers to reference specific files and symbols using @-mentions. The chat system understands complex queries across multiple files and provides detailed, context-aware responses that incorporate knowledge from the entire codebase.
+Cody's chat functionality is deeply integrated with codebase context, allowing developers to reference specific files and symbols using @-mentions. The chat system understands complex queries across multiple files, and provides detailed, context-aware responses that incorporate knowledge from the entire codebase.
 
 ### Replit AI
 Replit's AI Chat operates directly within the workspace, offering real-time coding help and continuous dialogue capabilities. It excels at providing immediate assistance and explanations, with features like the "Retry" option for alternative explanations and the ability to ask follow-up questions.
@@ -67,24 +69,31 @@ While specific privacy measures aren't explicitly detailed in the documentation,
 ## Pricing
 
 ### Sourcegraph Cody
-- **Free/Pro Tier**
+- **Free Tier**
+  - Free for individual users
   - Single repository access
   - Basic IDE integration
   - Essential code completion
-  - Standard chat functionality
+- **Pro Tier**
+  - $9 per month
+  - Unlimited chat and commands
+  - More powerful LLMs for chat
+  - Support with limited SLAs
 - **Enterprise Tier**
+  - $19 per user, per month
   - Multi-repository support
   - Enhanced features across all IDEs
   - Team collaboration capabilities
-  - Advanced context capabilities
-  - Custom integration options
+  - Custom deployment options
 
 ### Replit AI
 - **Free Plan**
+  - Free for individuals
   - Access to basic AI features
   - Standard code completion
   - Basic AI assistance
-- **Replit Core (Premium)**
+- **Replit Core**
+  - $15 per month
   - Exclusive access to advanced AI models
   - Enhanced AI features
   - More powerful code generation capabilities
@@ -93,4 +102,6 @@ While specific privacy measures aren't explicitly detailed in the documentation,
 
 Sourcegraph Cody and Replit AI serve different developer needs while both leveraging AI to enhance productivity. Sourcegraph Cody is better suited for enterprise teams working with large codebases across multiple repositories, offering superior context awareness and IDE integration options. Its strength lies in understanding complex codebases and providing deep integration with existing development workflows.
 
-Replit AI, on the other hand, excels in providing a more integrated, web-centric development experience, making it particularly appealing for individual developers, educational purposes, and quick prototyping. Its real-time assistance and seamless integration within the Replit environment make it an excellent choice for developers who prefer a more contained, web-based development approach. The choice between the two ultimately depends on your specific development needs, team size, and preferred development environment.
+Replit AI, on the other hand, excels in providing a more integrated, web-centric development experience, making it particularly appealing for individual developers, educational purposes, and quick prototyping. Its real-time assistance and seamless integration within the Replit environment make it an excellent choice for developers who prefer a more contained, web-based development approach. 
+
+Ultimately, the choice between the two will depend on your specific development needs, team size, and preferred development environment.
