--- a/copilot/comparing-copilot-vs-codeium.mdx
+++ b/copilot/comparing-copilot-vs-codeium.mdx
@@ -10,7 +10,9 @@ metaDescription: 'Compare GitHub Copilot and Codeium features, pricing, and capa
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, GitHub Copilot and Codeium stand out as two prominent solutions in the market. Both tools offer powerful code completion and AI assistance capabilities, but they differ significantly in their pricing models and enterprise features. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [GitHub Copilot](https://github.com/home) and [Codeium](https://codeium.com/) stand out as two AI code generation solutions in the market. Both offer powerful code completion and AI assistance capabilities, but they differ significantly in their pricing models and enterprise features. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,7 +31,7 @@ As AI-powered development tools continue to reshape how we write code, GitHub Co
     ['JetBrains Support', '✓', '✗'],
     ['NVIM Support', '✓', '✗'],
     ['Models Supported', 'GPT-4, Custom Models', 'GPT-4o, Claude 3.5'],
-    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise', 'Free, Pro $15/mo, Ultimate $60/mo']
+    ['Pricing', 'Free + Team $4/user/mo + Enterprise $21/user/mo', 'Free + Pro $15/mo + Pro Ultimate $60/mo']
 ]
 
 ## Code Completion
@@ -67,17 +69,43 @@ Codeium prioritizes user privacy with strong data handling policies. Users can o
 ## Pricing
 
 ### GitHub Copilot
-- **Individual Plan**: $10/month or $100/year
-- **Business Plan**: $19/user/month
-- **Enterprise Plan**: Custom pricing
-- **Education**: Free for verified students and educators
-- **Trial**: Available free trial period
+- **Free Plan**
+  - Free for individual users
+  - Unlimited public/private repositories
+  - Automatic security and version updates
+  - 2000 CI/CD minutes per month
+  - 500MB of Packages storage
+- **Team Plan**
+  - $4 per user, per month
+  - Access to GitHub Codespaces 
+  - Protected branches
+  - 3000 CI/CD minutes per month
+  - 2GB of Packages storage
+- **Enterprise Plan**
+  - $21 per user, per month
+  - Data residency 
+  - Enterprise managed users
+  - 50,000 CI/CD minutes per month
+  - 50GB of Packages storage
 
 ### Codeium
-- **Free Plan**: 5 User Prompt credits, 5 Flow Action credits
-- **Free Trial**: 50 User Prompt credits, 200 Flow Action credits (2 weeks)
-- **Pro Plan**: $15/month - 500 User Prompt credits, 1500 Flow Action credits
-- **Pro Ultimate**: $60/month - Unlimited User Prompt credits, 3000 Flow Action credits
+- **Free Plan**
+  - 5 User Prompt credits
+  - 5 Flow Action credits
+  - Cannot purchase more premium model credits
+  - Access to Cascade Base Model
+- **Pro Plan**
+  - $15 per month
+  - 500 User Prompt credits
+  - 1500 Flow Action credits
+  - Ability to purchase more premium model credits
+  - Priority unlimited access to Cascade Base Model
+- **Pro Ultimate**
+  - $60 per month
+  - Unlimited User Prompt credits
+  - 3000 Flow Action credits
+  - Ability to purchase more premium model credits
+  - Priority unlimited access to Cascade Base Model
 
 ## Conclusion
 
